Experimental and debugging changes. At this point the 2 major issues to deal with are 1) When we send config, the wrong route deals with it, so    i put a console log message that says we need to do something 2) The job control screen isn't finished. Right now history    generation is turned off by a comment, and the menus need to be fixed    and the screen doesn't update once a job has been started. My guess    is there is some update from fabmo server that isn't going where it    should or how. I  have some console logs you can see in the chrome    development tools console that show that updates are arriving, but    they don't seem to be getting where they need to go.

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -2,10 +2,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Job Manager</title>
+	<link rel="stylesheet" href="../../css/foundation.min.css">
 	<link rel="stylesheet" href="../../css/dashboard.css">
 	<link rel="stylesheet" href="./css/style.css">
-
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 <body>
@@ -122,10 +121,8 @@
 		</div>-->
 
 
-
-
 <div style="width:98%" id="queue_table"></div>
- </div>
+ </div> <!-- rmackie -->
   <div class="content" id="tabhistory">
 		<!-- JOB HISTORY LISTING -->
 		<table class="small-12 columns" style="width:100%" id="history_table">
@@ -147,8 +144,7 @@
 
   <!-- Javascript inclusions -->
   <script src="../../job_manager.js"></script>
-
-
+  <script> $(window).foundation(); <script>
 
 </body>
 </html>
