New debug, some work on menus for job management

--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -77,6 +77,6 @@
 </div>
 
   <script src="../../editor.js"></script>
-  <script> $(window).foundation(); <script>
+  <script> $(window).foundation(); </script>
 </body>
 </html>
