--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -183,6 +183,7 @@
       </div>
     </div>
 
+    <script src="../../common.js"></script>
     <script src="../../preview.js"></script>
   </body>
 </html>
