Add headers to the macro editor's macro list

--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -24,6 +24,14 @@
         </section>
         <section class="container">
                 <table class="small-12 columns" style="width:100%" id="macro_table">
+                <tr>
+                        <th></th>
+                        <th>Macro #</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th></th>
+                        <th></th>
+                </tr>
                 <tbody id="macro_table_body"></tbody>
                 </table>
         </section>
