Adding abc increment

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1609,9 +1609,9 @@
                 </div>
               </div>
               <div class="row collapse">
-                <label data-tip='Amount to move in the a and b axis for each "nudge" or incremental move issued from the keyboard or DRO'>AB Increment <div class="tool-tip">i</div></label>
+                <label data-tip='Amount to move in the a, b or c axis for each "nudge" or incremental move issued from the keyboard or DRO'>ABC Increment <div class="tool-tip">i</div></label>
                 <div class="small-9 columns">
-                  <input type="number" id="machine-manual-ab_increment" class="machine-input" />
+                  <input type="number" id="machine-manual-abc_increment" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
                   <span class="postfix">deg</span>
